Back Next button alignment fixed

--- a/selfonboarding/src/steps/SubscriptionCheck.css
+++ b/selfonboarding/src/steps/SubscriptionCheck.css
@@ -2,14 +2,16 @@
     height: fit-content;
     min-height: 200%;
     width: 100%;
+    
 }
 
 .contactCard{
     border: 1px solid gray;
+    border-radius: 20px;
     height: fit-content;
-    min-height: fit-content;
+    min-height: 400px;
     width: 300px;
     position: relative;
     left: 50px;
-    margin-bottom: 100px;
+    margin-bottom: -300px;
 }
